fix: table overflow when is not scrollabel
feat: new button variants

--- a/packages/react-components/src/components/icon-button/icon-button.module.css
+++ b/packages/react-components/src/components/icon-button/icon-button.module.css
@@ -1,7 +1,10 @@
 @layer components {
   .IconButton {
-    border-radius: 200px;
     padding: 0;
+
+    &[data-icon-button-squared='false'] {
+      border-radius: 200px;
+    }
 
     &[data-button-dimension='small'] {
       inline-size: token(--space-24);
