--- a/packages/react-components/src/components/toggle-button/toggle-button.module.css
+++ b/packages/react-components/src/components/toggle-button/toggle-button.module.css
@@ -1,39 +1,33 @@
 @layer components {
   .ToggleButton {
-    border-radius: 200px;
     line-height: 0;
     padding: 0;
 
+    &[data-icon-button-squared='false'] {
+      border-radius: 200px;
+    }
+
     &[aria-pressed='true'] {
-      box-shadow:
-        0 0 0 var(--border-width) var(--border-color),
-        0 0 0 var(--border-width) var(--border-color);
+      background: var(--background-color);
     }
 
     &[data-button-kind='primary'] {
-      --border-color: hsl(token(--color-red-30) / 25%);
-
       &[aria-pressed='true'] {
-        color: var(--cta-default);
-        background: none;
+        background: hsl(token(--color-red-50));
       }
     }
 
     &[data-button-kind='secondary'] {
-      --border-color: var(--dimmed-2);
-
       &[aria-pressed='true'] {
-        color: var(--global-vibrancy-foreground);
-        background: none;
+        color: var(--dimmed-0);
+        background: var(--dimmed-7);
       }
     }
 
     &[data-button-kind='flat'] {
-      --border-color: var(--dimmed-2);
-
       &[aria-pressed='true'] {
-        color: var(--global-vibrancy-foreground);
-        background: none;
+        color: var(--dimmed-0);
+        background: var(--dimmed-7);
       }
     }
 
